--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
@@ -5,10 +5,10 @@
         <div>
             <div class="form-group inline clearfix blocklabel-single">
                 <a name="@Html.NameFor(m => m.IsEmployerLocationMainApprenticeshipLocation).ToString().ToLower()"></a>
-                <h4 class="bold-small">Is this address the main apprenticeship location?</h4>
+                <h4 class="bold-small">Is this address the vacancy location?</h4>
 
                 <button type="submit" class="button" name="ConfirmEmployer" value="SetDifferentLocation">No, I need to add a different location</button>
-                <button type="submit" class="button" name="ConfirmEmployer" value="SetEmployersLocationAsMainLocation">Yes, this will be the main location</button>
+                <button type="submit" class="button" name="ConfirmEmployer" value="SetEmployersLocationAsMainLocation">Yes, this will be the vacancy location</button>
             </div>
         </div>
 
