--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -5,10 +5,8 @@
 }
 
 <h1 class="heading-xlarge">
-    Vacancy location
+    Vacancy location(s)
 </h1>
-
-<h2 class="heading-large">What is the main location of the vacancy?</h2>
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.AddLocations, FormMethod.Post, new { @id = "add-locations-form" }))
 {
@@ -118,20 +116,21 @@
         </div>
     </noscript>
 
-    <div class="hide-nojs">
+    <div class="hide-nojs" id="locationAddressesTable">
         <div id="address-lookup">
             <div class="form-group form-group-compound" id="addressInputWrapper">
-                <label for="postcode-search" class="form-label bold-small">Enter the employer's postcode or address</label>
-                <input id="postcode-search" type="text" class="form-control form-control-1-3" spellcheck="false" autocorrect="off" />
+                <label for="postcode-search" class="form-label bold-small">Enter the vacancy location or postcode</label>
+                <input id="postcode-search" type="text" class="form-control form-control-1-3" spellcheck="false" autocorrect="off" data-bind="style: {'display': addModeOn() }"/>
+                <a href="#" id="add-new-location" data-bind="style: {'display': addModeOff() }, click: addNewLocation">Add another location </a>
                 <span class="visuallyhidden" id="ariaAddressEntered" aria-live="polite"></span>
             </div>
             <div id="address-manual" class="form-group form-group-compound">
-                @*<a href="#" class="copy-19" id="enterAddressManually">Or enter address manually</a>*@<a href="#" class="copy-19" id="enterAddressManually"></a><a href="#" class="copy-19" id="enterAddressManually"></a>
+                <a href="#" class="copy-19" id="enterAddressManually"></a><a href="#" class="copy-19" id="enterAddressManually"></a>
                 <span class="toggle-content hide-nojs loading-text" id="addressLoading">Loading address...</span>
                 <span style="color: red" id="postcodeServiceUnavailable" class="copy-19 toggle-content hide-nojs text">Service si currently unavailable, please enter the full postcode</span>
             </div>
         </div>
-        <div id="locationAddressesTable">
+        <div>
             <div data-bind="style: {'display': locationAddressesStatus() }">
                 <table class="grid-3-4">
                     <colgroup>
@@ -156,10 +155,11 @@
                     <tbody id="location-addresses" data-bind="foreach: locationAddresses">
                         <tr>
                             <td>
-                                <span type="text" data-bind="html: itemFriendlyAddress()" maxlength="50" />
+                                <span data-bind="html: itemFriendlyAddress()" maxlength="50" />
                             </td>
                             <td>
-                                <input class="form-control qual-input-edit qual-year" maxlength="5" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions'}">
+                                <span style="width: 20%; display: inline-block"></span>
+                                <input class="form-control-small qual-input-edit qual-year" maxlength="5" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions'}">
                                 <span class="field-validation-valid" aria-live="polite" data-valmsg-replace="true" data-bind="attr:{'id': 'Addresses[' + $index() +'].NumberOfPositions_Error', 'data-valmsg-for': 'Addresses[' + $index() +'].NumberOfPositions'}"></span>
                                 <input type="hidden" data-bind="value: itemAddressLine1, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine1', 'id':'addresses_'+ $index() + 'address__AddressLine1' }">
                                 <input type="hidden" data-bind="value: itemAddressLine2, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine2', 'id':'addresses_'+ $index() + 'address__AddressLine2' }">
