--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorJS.cshtml
@@ -4,7 +4,7 @@
     <div class="hide-nojs">
         <div class="form-group inline clearfix blocklabel-single">
             <a name="@Html.NameFor(m => m.IsEmployerLocationMainApprenticeshipLocation).ToString().ToLower()"></a>
-            <h4 class="bold-small">Is this address the main apprenticeship location?</h4>
+            <h4 class="bold-small">Is this address the vacancy location?</h4>
 
             <label data-target="location-type-different-location-panel" for="location-type-different-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
                 @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new {id = "location-type-different-location", aria_controls = "location-type-different-location-panel"})
@@ -12,7 +12,7 @@
             </label>
             <label data-target="location-type-main-location-panel" for="location-type-main-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
                 @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, true, new {id = "location-type-main-location", aria_controls = "location-type-main-location-panel"})
-                Yes, this will be the main location
+                Yes, this will be the vacancy location
             </label>
         </div>
         <div id="location-type-main-location-panel" class="toggle-content blocklabel-content location">
