--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,92 +1,101 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.VacancyApplicationsViewModel
+@using SFA.Apprenticeships.Web.Recruit.ViewModels.Application
+@model VacancyApplicationsViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Vacancy applications";
 }
 
-<div>
-    <section>
-        <div class="hgroup text">
-            <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
-                @Model.Title
-            </h1>
-            <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.EmployerName</p>
-        </div>
-        <div class="grid-wrapper">
-            <div class="grid grid-2-3">
-                <div class="inner-block-padr">
-                    <div>
-                        <div class="text" itemprop="description">
-                            <p id="vacancy-description" class="preserve-formatting">@Model.ShortDescription</p>
-                            <p>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})" class="disp-block">View apprenticeship</a>
-                            </p>
+@using (Html.BeginRouteForm(RecruitmentRouteNames.VacancyApplications, FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+    @Html.HiddenFor(m => m.VacancyApplicationsSearch.VacancyReferenceNumber)
+    @Html.HiddenFor(m => m.VacancyApplicationsSearch.FilterType)
+
+    <div>
+        <section>
+            <div class="hgroup text">
+                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
+                    @Model.Title
+                </h1>
+                <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.EmployerName</p>
+            </div>
+            <div class="grid-wrapper">
+                <div class="grid grid-2-3">
+                    <div class="inner-block-padr">
+                        <div>
+                            <div class="text" itemprop="description">
+                                <p id="vacancy-description" class="preserve-formatting">@Model.ShortDescription</p>
+                                <p>
+                                    <a href="@Url.RouteUrl(RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber})" class="disp-block">View apprenticeship</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="grid grid-1-3">
+                    <p class="small-btm-margin">
+                        <a href="">Manage vacancy dates</a>
+                    </p>
+                    <p class="small-btm-margin">
+                        <a href="">Withdraw</a>
+                    </p>
+                </div>
             </div>
-            <div class="grid grid-1-3">
-                <p class="small-btm-margin">
-                    <a href="">Manage vacancy dates</a>
-                </p>
-                <p class="small-btm-margin">
-                    <a href="">Withdraw</a>
-                </p>
+        </section>
+
+        <section>
+            <div class="panel-indent text">
+                @{
+                    var daysTillClose = (Model.ClosingDate - DateTime.UtcNow).Days;
+                    if (daysTillClose == 0)
+                    {
+                        <p>This vacancy is closing today.</p>
+                    }
+                    if (daysTillClose == 1)
+                    {
+                        <p>This vacancy is due to close in 1 day.</p>
+                    }
+                    if (daysTillClose > 1 && daysTillClose <= 5)
+                    {
+                        <p>This vacancy is due to close in @daysTillClose days.</p>
+                    }
+                }
+
+                @if (Model.RejectedApplicationsCount == 1)
+                {
+                    <p>You've rejected 1 application.</p>
+                }
+                else if (Model.RejectedApplicationsCount > 1)
+                {
+                    <p>You've rejected @Model.RejectedApplicationsCount applications.</p>
+                }
+
+                @if (Model.UnresolvedApplicationsCount == 1)
+                {
+                    <p>There is still 1 application to send an outcome to.</p>
+                }
+                else if (Model.UnresolvedApplicationsCount > 1)
+                {
+                    <p>There are still @Model.UnresolvedApplicationsCount applications to send an outcome to.</p>
+                }
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section>
-        <div class="panel-indent text">
-            @{
-                var daysTillClose = (Model.ClosingDate - DateTime.UtcNow).Days;
-                if (daysTillClose == 0)
-                {
-                    <p>This vacancy is closing today.</p>
-                }
-                if (daysTillClose == 1)
-                {
-                    <p>This vacancy is due to close in 1 day.</p>
-                }
-                if (daysTillClose > 1 && daysTillClose <= 5)
-                {
-                    <p>This vacancy is due to close in @daysTillClose days.</p>
-                }
-            }
-
-            @if (Model.RejectedApplicationsCount == 1)
-            {
-                <p>You've rejected 1 application.</p>
-            }
-            else if (Model.RejectedApplicationsCount > 1)
-            {
-                <p>You've rejected @Model.RejectedApplicationsCount applications.</p>
-            }
-
-            @if (Model.UnresolvedApplicationsCount == 1)
-            {
-                <p>There is still 1 application to send an outcome to.</p>
-            }
-            else if (Model.UnresolvedApplicationsCount > 1)
-            {
-                <p>There are still @Model.UnresolvedApplicationsCount applications to send an outcome to.</p>
-            }
-        </div>
-    </section>
-
-    <section class="no-btm-margin" id="applicationsSection">
-        <div class="hgroup-large">
-            <h2 class="heading-large">Applications</h2>
-        </div>
-        <table class="vert-top" id="applicationTable">
-            <colgroup>
-                <col class="t40">
-                <col class="t20">
-                <col class="t20">
-                <col class="t20">
-            </colgroup>
-            <thead>
+        <section class="no-btm-margin" id="applicationsSection">
+            <div class="hgroup-large">
+                <h2 class="heading-large">Applications</h2>
+            </div>
+            <table class="vert-top" id="applicationTable">
+                <colgroup>
+                    <col class="t30">
+                    <col class="t30">
+                    <col class="t20">
+                    <col class="t20">
+                </colgroup>
+                <thead>
                 <tr>
                     <th>
                         <a class="font-black">Applicant name</a>
@@ -101,45 +110,77 @@
                         <a class="font-black">Status</a>
                     </th>
                 </tr>
-            </thead>
-            <tbody>
-            @foreach (var applicationSummary in Model.ApplicationSummaries.Page)
-            {
-                <tr class="applicant">
-                    <td>
-                        <h4 class="applicant-name">
-                            <a href="@Url.RouteUrl(RecruitmentRouteNames.ReviewApprenticeshipApplication, new {applicationId = applicationSummary.ApplicationId})" title="View @applicationSummary.ApplicantName application">@applicationSummary.ApplicantName</a>
-                        </h4>
-                    </td>
-                    <td>
-                        @{
-                            var notes = applicationSummary.Notes;
-                            if (notes != null && notes.Length > 20)
-                            {
-                                notes = notes.Substring(0, 20) + "...";
+                </thead>
+                <tbody>
+                @foreach (var applicationSummary in Model.ApplicationSummaries.Page)
+                {
+                    <tr class="applicant">
+                        <td>
+                            <h4 class="applicant-name">
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ReviewApprenticeshipApplication, new {applicationId = applicationSummary.ApplicationId})" title="View @applicationSummary.ApplicantName application">@applicationSummary.ApplicantName</a>
+                            </h4>
+                        </td>
+                        <td>
+                            @{
+                                var notes = applicationSummary.Notes;
+                                if (notes != null && notes.Length > 20)
+                                {
+                                    notes = notes.Substring(0, 20) + "...";
+                                }
                             }
-                        }
-                        @notes
-                    </td>
-                    <td>@Html.DisplayFor(m => applicationSummary.DateApplied)</td>
-                    <td>
-                        @Html.Partial("_applicationStatus", applicationSummary.Status)
-                    </td>
-                </tr>
-            }
-            </tbody>
-        </table>
-        <!--   <div class="page-navigation font-xsmall small-btm-margin">
-          <a href="#" class="page-navigation__btn previous disabled">
+                            @notes
+                        </td>
+                        <td>@Html.DisplayFor(m => applicationSummary.DateApplied)</td>
+                        <td>
+                            @Html.Partial("_applicationStatus", applicationSummary.Status)
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </section>
+    </div>
+
+    <div class="page-navigation">
+
+        @{
+            var currentPage = Model.ApplicationSummaries.CurrentPage;
+            var totalNumberOfPages = Model.ApplicationSummaries.TotalNumberOfPages;
+            var prevLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage - 1));
+            var nextLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage + 1));
+        }
+
+        <a href="@prevLink"
+           style="visibility: @(currentPage == 1 ? "hidden" : "visible"); width: 33.333333333%"
+           class="page-navigation__btn previous grid grid-1-3">
             <i class="arrow-button fa fa-angle-left"></i>
-            <span class="description">Previous</span>
-            <span class="counter">1 of 3</span>
-          </a>
-          <a href="#" class="page-navigation__btn next">
+            <span class="description">Previous <span class="hide-mob">page</span></span>
+            <span class="counter">@(currentPage - 1) of @totalNumberOfPages</span>
+        </a>
+
+        <div id="page-size-container" class="grid grid-1-3 page-navigation__btn" style="width: 33.333333333%; text-align: center">
+            <label for="page-size" class="heading-small inline">Display results</label>
+            @Html.DropDownListFor(m => m.VacancyApplicationsSearch.PageSize, Model.VacancyApplicationsSearch.PageSizes, new {id = "page-size"})
+            <noscript>
+                <button class="button" name="SearchVacanciesAction" value="SearchVacancies">View</button>
+            </noscript>
+        </div>
+
+        <a href="@nextLink"
+           style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible"); width: 33.333333333%"
+           class="page-navigation__btn next grid grid-1-3">
             <i class="arrow-button fa fa-angle-right"></i>
-            <span class="description">Next</span>
-            <span class="counter">2 of 3</span>
-          </a>
-        </div> -->
-    </section>
-</div>
+            <span class="description">Next <span class="hide-mob">page</span></span>
+            <span class="counter">@(currentPage + 1) of @totalNumberOfPages</span>
+        </a>
+
+    </div>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/vacancyApplications")
+    <script>
+        var searchUrl = '@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications)';
+    </script>
+}
