--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -75,7 +75,7 @@ h2{
 
 // Dashboard 
 
-.vacancies-summary {
+.vacancies-summary, .applications-summary {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -85,18 +85,6 @@ h2{
         padding: 0 10px;
         display: block;
         float: left;
-        @media screen and ( max-width: 640px ) {
-            padding: 0 10px;
-            width: ( 100% / 1 );
-        }
-        @media screen and ( min-width: 641px ) and ( max-width: 768px ) {
-            padding: 0 10px 0 0;
-            width: ( 100% / 3 );
-        }
-        @media screen and ( min-width: 769px ) {
-            padding: 0 10px 0 0;
-            width: ( 100% / 6 );
-        }
         a {
             text-decoration: none;
         }
@@ -136,6 +124,40 @@ h2{
                     }
                 }
             }
+        }
+    }
+}
+
+.vacancies-summary {
+    li {
+        @media screen and ( max-width: 640px ) {
+            padding: 0 10px;
+            width: ( 100% / 1 );
+        }
+        @media screen and ( min-width: 641px ) and ( max-width: 768px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 3 );
+        }
+        @media screen and ( min-width: 769px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 6 );
+        }
+    }
+}
+
+.applications-summary {
+    li {
+        @media screen and ( max-width: 640px ) {
+            padding: 0 10px;
+            width: ( 100% / 1 );
+        }
+        @media screen and ( min-width: 641px ) and ( max-width: 768px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 2 );
+        }
+        @media screen and ( min-width: 769px ) {
+            padding: 0 10px 0 0;
+            width: ( 100% / 4 );
         }
     }
 }
